<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.6</version>
        <relativePath /> <!-- lookup parent from repository -->
    </parent>

    <groupId>com.sessionflow</groupId>
    <artifactId>sessionflow</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>sessionflow</name>
    <description>SessionFlow Application</description>

    <properties>
        <java.version>17</java.version>
        <lombok.version>1.18.30</lombok.version>
    </properties>

    <dependencies>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>

        <!-- Spring Boot Starters -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-websocket</artifactId>
        </dependency>

        <!-- Database -->
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <scope>runtime</scope>
        </dependency>

        <!-- Lombok to reduce boilerplate code -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>

        <!-- SpringDoc OpenAPI for Swagger UI -->
        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
            <version>2.7.0</version>
        </dependency>

        <!-- Testing -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.10</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                        <configuration>
                            <includes>
                                <include>com/sessionflow/controller/**</include>
                                <include>com/sessionflow/exception/**</include>
                                <include>com/sessionflow/mapper/**</include>
                                <include>com/sessionflow/repository/**</include>
                                <include>com/sessionflow/service/**</include>
                                <include>com/sessionflow/websocket/**</include>
                            </includes>
                            <excludes>
                                <exclude>javax/sql/**</exclude>
                                <exclude>java/sql/**</exclude>
                                <exclude>jdk/**</exclude>
                                <exclude>**/*$HibernateProxy*</exclude>
                                <exclude>**/*$HibernateInstantiator*</exclude>
                                <exclude>**/*$MockitoMock*</exclude>
                                <exclude>com/sessionflow/dto/**</exclude>
                                <exclude>com/sessionflow/model/**</exclude>
                                <exclude>com/sessionflow/config/**</exclude>
                            </excludes>
                        </configuration>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                        <configuration>
                            <excludes>
                                <exclude>com/sessionflow/exception/**</exclude>
                                <exclude>com/sessionflow/dto/**</exclude>
                                <exclude>com/sessionflow/model/**</exclude>
                                <exclude>com/sessionflow/common/**</exclude>
                                <exclude>com/sessionflow/config/**</exclude>
                                <exclude>com/sessionflow/SessionFlowApplication.class</exclude>
                                <exclude>com/sessionflow/exception/ErrorResponse.class</exclude>
                                <exclude>com/sessionflow/controller/HealthController.class</exclude>
                            </excludes>
                        </configuration>
                    </execution>
                </executions>

            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.1.2</version>
                <configuration>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project> 